[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bustercall"
version = "0.1.0"
description = "Local chat server for AI agents and humans"
requires-python = ">=3.10"
dependencies = [
    "starlette>=0.37.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "click>=8.1.0",
]

[project.scripts]
bustercall = "bustercall.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bustercall"]
